--- a/da 5/apostrophe/src/styles/Profile.css
+++ b/da 5/apostrophe/src/styles/Profile.css
@@ -57,4 +57,6 @@
 
 .Profile .poems {
     margin-top: 40px;
+    display: flex;
+    flex-direction: column-reverse;
 }
