--- a/da 5/apostrophe/src/styles/Search.css
+++ b/da 5/apostrophe/src/styles/Search.css
@@ -57,73 +57,3 @@
     position: relative;
 }
 
-.Poem .action-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.Poem .action-bar .button {
-    cursor: pointer;
-}
-
-.Poem.closed {
-    height: 200px;
-    text-overflow: ellipsis;
-}
-
-.Poem a {
-    height: 80%;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.Poem .collections-dropdown.hide {
-    display: none;
-}
-
-.Poem .collections-dropdown {
-    position: absolute;
-    right: 0px;
-    bottom: -80px;
-    background-color: #D9D9D9;
-    padding: 10px;
-    z-index: 1;
-}
-
-.Home-poem {
-    padding: 5%;
-}
-
-.Home-poem h1 {
-    font-size: 24px;
-}
-
-.Home-poem .scroll-top {
-    position: fixed;
-    height: 10px;
-    width: 100%;
-    top: 0;
-    background-color: #FDF9F5;
-}
-
-.Home-poem .Home-poem-nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    position: sticky;
-    top: 10px;
-    background-color: #FDF9F5;
-}
-
-.Home-poem .divider-bottom {
-    height: 10px;
-    background-color: #FDF9F5;
-    position: sticky;
-    top: 73px;
-}
-
-.Home-poem .tags {
-    margin-bottom: 30px;
-}
